<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    >

    <group android:checkableBehavior="single">
        <item android:id="@+id/home"
            android:title="@string/home"/>
        <item android:id="@+id/profile"
            android:title="@string/profile"/>
        <item android:id="@+id/accounts"
            android:title="@string/accounts"/>
        <item android:id="@+id/transactions"
            android:title="@string/transactions"/>
        <item android:id="@+id/stats"
            android:title="@string/stats"/>
        <item android:id="@+id/settings"
            android:title="@string/settings"/>
        <item android:id="@+id/help"
            android:title="@string/help"/>
    </group>

</menu>